cicd/codeseries/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: skills-service
  namespace: skills
  labels:
    skills: app
spec:
  selector:
    skills: app
  type: ClusterIP
  ports:
    - name: skills-port
      protocol: TCP
      port: 8080
      targetPort: 8080
